# SoapBubble

./: .gitignore  CMakeLists.txt  README.md  config.txt
KaminoGPU/: CMakeLists.txt  configKamino.txt
KaminoGPU/include/: KaminoGPU.cuh  KaminoHeader.cuh  KaminoParticles.cuh  KaminoQuantity.cuh  KaminoSolver.cuh  KaminoTimer.cuh  utils.h
KaminoGPU/init/: PCGF_F.json  midFrequency.exr  thickness.exr  thickness128.exr  thickness256.exr  thickness32.exr  thickness64.exr
KaminoGPU/kernel/: KaminoCore.cu  KaminoInitializer.cu  KaminoParticles.cu  KaminoQuantity.cu  KaminoSolver.cu  KaminoTimer.cu  main.cu
KaminoGPU/tests/: CMakeLists.txt  kamino.cc  kamino.hh  run_all.cc  sample_test.cc
include/: bubble.cuh  header.cuh  quantity.cuh  solver.cuh  timer.cuh  utils.h
init/: checkerboard.exr  lowFrequency.exr  velocityfield_512.exr
kernel/: bubble.cu  initializer.cu  main.cu  quantity.cu  solver.cu  timer.cu
opencv_headers/opencv2/: cvconfig.h  opencv_modules.hpp
